--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </form>
       </div>
     </main>
-
+    <script src="anime.min.js"></script>
     <script type="module" defer src="JS/index.js"></script>
   </body>
 </html>
